# parental-controls-js

./: .gitignore  build.sh  classes.ts  clean.sh  config copy.json  config.csv  config.json  deno.jsonc  deploy.sh  desktop-notifications.ts  main.ts  node.js  node.ts  notifier.sh  package-lock.json  package.json  parental-controls-deno.postman_collection.json  parental-controls.app.deno.js  readme.md  run.sh  scripts.json  shellscript.service  webserver.router.ts  webserver.ts
parental-controls-ui/: package-lock.json  package.json  tsconfig.json
parental-controls-ui/scripts/: build.sh  clean.sh  deploy-frontend.sh
parental-controls-ui/src/: App.svelte  client-api.ts
scripts/: build.sh  clean.sh  compile.sh  config.json  deploy-local.sh  deploy-update.sh  deploy.sh  fileserve-static.sh  generate-notify-send-icons.sh  install.service.sh  notify-send-all  parental-controls.app.deno.sh  parental-controls.service.run  parentalcontrols.service  run.sh  script.sh  semver.sh  send-notifications.sh  uninstall.service.sh  wmctrl-all
src/: Zenity.ts  classes.ts  desktop-notifications.ts  events.ts  functions.ts  getTransientConfig.ts  gnome-icons.json  main.ts  penv.js  release.info.json  router.config.ts  spawnProcess.ts  webserver.router.ts
test/: main_bench.ts  main_test.ts
test-application-cli/: main-cli.c  makefile
test-application-cli/scripts/: .config  build.sh  killall.sh  run.sh
test-application-graphical/: CMakeLists.txt  Makefile  main-gtk  main-gtk.c
test-application-graphical/scripts/: build.sh
test-application/scripts/: .config  build.sh  clean.sh  (+2 more)
(+23 files in other folders)
